tomcat 4.0.2