@@ -1,137 +1,183 @@
 @echo off
+if "%OS%" == "Windows_NT" setlocal
 rem ---------------------------------------------------------------------------
-rem catalina.bat - Start/Stop Script for the CATALINA Server
+rem Start/Stop Script for the CATALINA Server
 rem
-rem Environment Variable Prequisites:
+rem Environment Variable Prequisites
 rem
-rem   CATALINA_BASE (Optional) Base directory for resolving dynamic portions
-rem                 of a Catalina installation.  If not present, resolves to
-rem                 the same directory that CATALINA_HOME points to.
+rem   CATALINA_HOME   May point at your Catalina "build" directory.
 rem
-rem   CATALINA_HOME (Optional) May point at your Catalina "build" directory.
-rem                 If not present, the current working directory is assumed.
+rem   CATALINA_BASE   (Optional) Base directory for resolving dynamic portions
+rem                   of a Catalina installation.  If not present, resolves to
+rem                   the same directory that CATALINA_HOME points to.
 rem
-rem   CATALINA_OPTS (Optional) Java runtime options used when the "start",
-rem                 "stop", or "run" command is executed.
+rem   CATALINA_OPTS   (Optional) Java runtime options used when the "start",
+rem                   "stop", or "run" command is executed.
 rem
-rem   JAVA_HOME     Must point at your Java Development Kit installation.
+rem   CATALINA_TMPDIR (Optional) Directory path location of temporary directory
+rem                   the JVM should use (java.io.tmpdir).  Defaults to
+rem                   %CATALINA_BASE%\temp.
 rem
-rem   JSSE_HOME     (Optional) May point at your Java Secure Sockets Extension
-rem                 (JSSE) installation, whose JAR files will be added to the
-rem                 system class path used to start Tomcat.
+rem   JAVA_HOME       Must point at your Java Development Kit installation.
 rem
-rem $Id: catalina.bat,v 1.14 2001/10/14 21:30:36 jon Exp $
+rem   JAVA_OPTS       (Optional) Java runtime options used when the "start",
+rem                   "stop", or "run" command is executed.
+rem
+rem   JSSE_HOME       (Optional) May point at your Java Secure Sockets Extension
+rem                   (JSSE) installation, whose JAR files will be added to the
+rem                   system class path used to start Tomcat.
+rem
+rem   JPDA_ADDRESS    (Optional) Java runtime options used when the "jpda start"
+rem                   command is executed. The default is "jdbconn".
+rem
+rem $Id: catalina.bat,v 1.15 2002/02/11 18:41:56 jon Exp $
 rem ---------------------------------------------------------------------------
 
-
-rem ----- Save Environment Variables That May Change --------------------------
-
-set _CATALINA_BASE=%CATALINA_BASE%
-set _CATALINA_HOME=%CATALINA_HOME%
-set _CLASSPATH=%CLASSPATH%
-set _CP=%CP%
-
-
-rem ----- Verify and Set Required Environment Variables -----------------------
-
-if not "%JAVA_HOME%" == "" goto gotJava
-echo You must set JAVA_HOME to point at your Java Development Kit installation
-goto cleanup
-:gotJava
-
+rem Guess CATALINA_HOME if not defined
 if not "%CATALINA_HOME%" == "" goto gotHome
 set CATALINA_HOME=.
 if exist "%CATALINA_HOME%\bin\catalina.bat" goto okHome
 set CATALINA_HOME=..
 :gotHome
 if exist "%CATALINA_HOME%\bin\catalina.bat" goto okHome
-echo Cannot find catalina.bat in %CATALINA_HOME%\bin
-echo Please check your CATALINA_HOME setting
-goto cleanup
+echo The CATALINA_HOME environment variable is not defined correctly
+echo This environment variable is needed to run this program
+goto end
 :okHome
+
+rem Get standard environment variables
+if exist "%CATALINA_HOME%\bin\setenv.bat" call "%CATALINA_HOME%\bin\setenv.bat"
+
+rem Get standard Java environment variables
+if exist "%CATALINA_HOME%\bin\setclasspath.bat" goto okSetclasspath
+echo Cannot find %CATALINA_HOME%\bin\setclasspath.bat
+echo This file is needed to run this program
+goto end
+:okSetclasspath
+set BASEDIR=%CATALINA_HOME%
+call "%CATALINA_HOME%\bin\setclasspath.bat"
+
+rem Add on extra jar files to CLASSPATH
+if "%JSSE_HOME%" == "" goto noJsse
+set CLASSPATH=%CLASSPATH%;%JSSE_HOME%\lib\jcert.jar;%JSSE_HOME%\lib\jnet.jar;%JSSE_HOME%\lib\jsse.jar
+:noJsse
+set CLASSPATH=%CLASSPATH%;%CATALINA_HOME%\bin\bootstrap.jar
 
 if not "%CATALINA_BASE%" == "" goto gotBase
 set CATALINA_BASE=%CATALINA_HOME%
 :gotBase
 
-
-rem ----- Prepare Appropriate Java Execution Commands -------------------------
-
-if not "%OS%" == "Windows_NT" goto noTitle
-set _STARTJAVA=start "Catalina" "%JAVA_HOME%\bin\java"
-set _RUNJAVA="%JAVA_HOME%\bin\java"
-goto gotTitle
-:noTitle
-set _STARTJAVA=start "%JAVA_HOME%\bin\java"
-set _RUNJAVA="%JAVA_HOME%\bin\java"
-:gotTitle
-
-rem ----- Set Up The Runtime Classpath ----------------------------------------
-
-set CP=%CATALINA_HOME%\bin\bootstrap.jar;%JAVA_HOME%\lib\tools.jar
-if "%JSSE_HOME%" == "" goto noJsse
-set CP=%CP%;%JSSE_HOME%\lib\jcert.jar;%JSSE_HOME%\lib\jnet.jar;%JSSE_HOME%\lib\jsse.jar
-:noJsse
-set CLASSPATH=%CP%
-echo Using CATALINA_BASE: %CATALINA_BASE%
-echo Using CATALINA_HOME: %CATALINA_HOME%
-echo Using CLASSPATH:     %CLASSPATH%
-echo Using JAVA_HOME:     %JAVA_HOME%
-
+if not "%CATALINA_TMPDIR%" == "" goto gotTmpdir
+set CATALINA_TMPDIR=%CATALINA_BASE%\temp
+:gotTmpdir
 
 rem ----- Execute The Requested Command ---------------------------------------
 
-if "%1" == "env" goto doEnv
-if "%1" == "run" goto doRun
-if "%1" == "start" goto doStart
-if "%1" == "stop" goto doStop
+echo Using CATALINA_BASE:   %CATALINA_BASE%
+echo Using CATALINA_HOME:   %CATALINA_HOME%
+echo Using CATALINA_TMPDIR: %CATALINA_TMPDIR%
+echo Using JAVA_HOME:       %JAVA_HOME%
 
-:doUsage
-echo Usage:  catalina ( env ^| run ^| start ^| stop )
-echo Commands:
-echo   env -   Set up environment variables that Catalina would use
-echo   run -   Start Catalina in the current window
-echo   start - Start Catalina in a separate window
-echo   stop -  Stop Catalina
-goto cleanup
+set _EXECJAVA=%_RUNJAVA%
+set MAINCLASS=org.apache.catalina.startup.Bootstrap
+set ACTION=start
+set SECURITY_POLICY_FILE=
+set DEBUG_OPTS=
+set JPDA=
 
-:doEnv
-goto finish
+if not "%1" == "jpda" goto noJpda
+set JPDA=jpda
+if not "%JPDA_ADDRESS%" == "" got gotJpdaAddress
+set JPDA_ADDRESS=jdbconn
+:gotJpdaAddress
+shift
+:noJpda
+
+if ""%1"" == ""debug"" goto doDebug
+if ""%1"" == ""embedded"" goto doEmbedded
+if ""%1"" == ""run"" goto doRun
+if ""%1"" == ""start"" goto doStart
+if ""%1"" == ""stop"" goto doStop
+
+echo Usage:  catalina ( commands ... )
+echo commands:
+echo   debug             Start Catalina in a debugger
+echo   debug -security   Debug Catalina with a security manager
+echo   embedded          Start Catalina in embedded mode
+echo   jpda start        Start Catalina under JPDA debugger
+echo   run               Start Catalina in the current window
+echo   run -security     Start in the current window with security manager
+echo   start             Start Catalina in a separate window
+echo   start -security   Start in a separate window with security manager
+echo   stop              Stop Catalina
+goto end
+
+:doDebug
+shift
+set _EXECJAVA=%_RUNJDB%
+set DEBUG_OPTS=-sourcepath "%CATALINA_HOME%\..\..\jakarta-tomcat-4.0\catalina\src\share"
+if not ""%1"" == ""-security"" goto execCmd
+shift
+echo Using Security Manager
+set SECURITY_POLICY_FILE=%CATALINA_BASE%\conf\catalina.policy
+goto execCmd
+
+:doEmbedded
+shift
+set MAINCLASS=org.apache.catalina.startup.Embedded
+goto execCmd
 
 :doRun
-if "%2" == "-security" goto doRunSecure
-%_RUNJAVA% %CATALINA_OPTS% -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" org.apache.catalina.startup.Bootstrap %2 %3 %4 %5 %6 %7 %8 %9 start
-goto cleanup
-:doRunSecure
-%_RUNJAVA% %CATALINA_OPTS% -Djava.security.manager -Djava.security.policy=="%CATALINA_BASE%/conf/catalina.policy" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" org.apache.catalina.startup.Bootstrap %3 %4 %5 %6 %7 %8 %9 start
-goto cleanup
+shift
+if not ""%1"" == ""-security"" goto execCmd
+shift
+echo Using Security Manager
+set SECURITY_POLICY_FILE=%CATALINA_BASE%\conf\catalina.policy
+goto execCmd
 
 :doStart
-if "%2" == "-security" goto doStartSecure
-%_STARTJAVA% %CATALINA_OPTS% -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" org.apache.catalina.startup.Bootstrap %2 %3 %4 %5 %6 %7 %8 %9 start
-goto cleanup
-:doStartSecure
+shift
+if not "%OS%" == "Windows_NT" goto noTitle
+set _EXECJAVA=start "Tomcat" %_RUNJAVA%
+goto gotTitle
+:noTitle
+set _EXECJAVA=start %_RUNJAVA%
+:gotTitle
+if not ""%1"" == ""-security"" goto execCmd
+shift
 echo Using Security Manager
-%_STARTJAVA% %CATALINA_OPTS% -Djava.security.manager -Djava.security.policy=="%CATALINA_BASE%/conf/catalina.policy" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" org.apache.catalina.startup.Bootstrap %3 %4 %5 %6 %7 %8 %9 start
-goto cleanup
+set SECURITY_POLICY_FILE=%CATALINA_BASE%\conf\catalina.policy
+goto execCmd
 
 :doStop
-%_RUNJAVA% %CATALINA_OPTS% -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" org.apache.catalina.startup.Bootstrap %2 %3 %4 %5 %6 %7 %8 %9 stop
-goto cleanup
+shift
+set ACTION=stop
+goto execCmd
 
+:execCmd
+rem Get remaining unshifted command line arguments and save them in the
+set CMD_LINE_ARGS=
+:setArgs
+if ""%1""=="""" goto doneSetArgs
+set CMD_LINE_ARGS=%CMD_LINE_ARGS% %1
+shift
+goto setArgs
+:doneSetArgs
 
+rem Execute Java with the applicable properties
+if not "%JPDA%" == "" goto doJpda
+if not "%SECURITY_POLICY_FILE%" == "" goto doSecurity
+%_EXECJAVA% %JAVA_OPTS% %CATALINA_OPTS% %DEBUG_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -classpath "%CLASSPATH%" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" -Djava.io.tmpdir="%CATALINA_TMPDIR%" %MAINCLASS% %CMD_LINE_ARGS% %ACTION%
+goto end
+:doSecurity
+%_EXECJAVA% %JAVA_OPTS% %CATALINA_OPTS% %DEBUG_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -classpath "%CLASSPATH%" -Djava.security.manager -Djava.security.policy=="%SECURITY_POLICY_FILE%" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" -Djava.io.tmpdir="%CATALINA_TMPDIR%" %MAINCLASS% %CMD_LINE_ARGS% %ACTION%
+goto end
+:doJpda
+if not "%SECURITY_POLICY_FILE%" == "" goto doSecurityJpda
+%_EXECJAVA% %JAVA_OPTS% %CATALINA_OPTS% -Xdebug -Xrunjdwp:transport=dt_shmem,address=%JPDA_ADDRESS%,server=y,suspend=n %DEBUG_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -classpath "%CLASSPATH%" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" -Djava.io.tmpdir="%CATALINA_TMPDIR%" %MAINCLASS% %CMD_LINE_ARGS% %ACTION%
+goto end
+:doSecurityJpda
+%_EXECJAVA% %JAVA_OPTS% %CATALINA_OPTS% -Xrunjdwp:transport=dt_shmem,address="%JPDA_ADDRESS%",server=y,suspend=n %DEBUG_OPTS% -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS%" -classpath "%CLASSPATH%" -Djava.security.manager -Djava.security.policy=="%SECURITY_POLICY_FILE%" -Dcatalina.base="%CATALINA_BASE%" -Dcatalina.home="%CATALINA_HOME%" -Djava.io.tmpdir="%CATALINA_TMPDIR%" %MAINCLASS% %CMD_LINE_ARGS% %ACTION%
+goto end
 
-rem ----- Restore Environment Variables ---------------------------------------
-
-:cleanup
-set CATALINA_BASE=%_CATALINA_BASE%
-set _CATALINA_BASE=
-set CATALINA_HOME=%_CATALINA_HOME%
-set _CATALINA_HOME=
-set CLASSPATH=%_CLASSPATH%
-set _CLASSPATH=
-set CP=%_CP%
-set _LIBJARS=
-set _RUNJAVA=
-set _STARTJAVA=
-:finish
+:end
